--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body{
     background-color: purple;
+
 }
 
 p {
     font-family: monospace;
     text-align: center;
     color: lightpink;
+
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -13,6 +15,7 @@ h1,h2,h3,h4,h5,h6 {
     color: lightyellow;
     font-style: italic;
     text-align: right;
+
 }
 
 h1 {
@@ -20,15 +23,40 @@ h1 {
     font-size: 150px;
     color: white;
     font-style: normal;
-    }
+
+}
 
 h2 {
     color: black;
-    }
+
+}
 
 .special {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     font-size: 40px;
     text-align: left;
-    }
+
+}
+
+ul {
+    list-style-type:square;
+
+}
+
+ol {
+    list-style-type: upper-roman;
+
+}
+
+li {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
+.fave{
+    color: orangered;
+    
+}
