--- a/styles.css
+++ b/styles.css
@@ -78,4 +78,11 @@ a {
     color: white;
     font-size: 25px;
     font-weight: bold;
+    
+}
+
+.section-one {
+    border: 1px solid white;
+    background-color: darkslateblue;
+
 }
