--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,22 @@ a {
     color: white;
     font-size: 25px;
     font-weight: bold;
-    
+
 }
 
 .section-one {
     border: 1px solid white;
     background-color: darkslateblue;
 
+}
+
+.caption {
+    font-size: 15px;
+    font-style: italic;
+
+}
+
+.containter {
+    display: flex;
+    
 }
