--- a/styles.css
+++ b/styles.css
@@ -95,5 +95,13 @@ a {
 
 .containter {
     display: flex;
+
+}
+
+.cake-item {
+    border: 1px dashed yellow;
+    width: 275px;
+    height: 275px;
+    padding: 4px;
     
 }
